--- a/CSScheatsheet/css/style.css
+++ b/CSScheatsheet/css/style.css
@@ -1,4 +1,7 @@
 body{
     background-color: #f4f4f4;
     color: #555555;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: normal;
 }
