--- a/CSScheatsheet/css/style.css
+++ b/CSScheatsheet/css/style.css
@@ -11,5 +11,10 @@ body{
     font: normal 16px arial,helvetica,sans-serif;
 
     line-height: 1.6em;
+    margin: 0;
 
+}
+
+.box-1{
+    background-color: black;
 }
