--- a/CSScheatsheet/css/style.css
+++ b/CSScheatsheet/css/style.css
@@ -23,4 +23,16 @@ body{
 .box-1{
     background-color: black;
     color: #f4f4f4;
+
+    border-right: 5px red solid;
+    border-left: 5px red solid;
+    border-top: 5px red solid;
+    border-bottom: 5px red solid;
+
+    /* Same as above. Used as an alternative if all components are the same */
+    border: 5px red solid;
+    border-width: 3px;
+    border-bottom-width: 10px;
+    border-top-style: dotted;
+
 }
