--- a/CSScheatsheet/css/style.css
+++ b/CSScheatsheet/css/style.css
@@ -1,3 +1,8 @@
+/* *{
+    margin: 0;
+    padding: 0;
+} */
+
 body{
 
     background-color: #f4f4f4;
@@ -15,6 +20,11 @@ body{
 
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 .container{
     width: 80%;
     margin: auto;
@@ -28,11 +38,60 @@ body{
     border-left: 5px red solid;
     border-top: 5px red solid;
     border-bottom: 5px red solid;
-
     /* Same as above. Used as an alternative if all components are the same */
     border: 5px red solid;
     border-width: 3px;
     border-bottom-width: 10px;
     border-top-style: dotted;
 
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+    /* Same as above. Used as an alternative if all components are the same */
+    padding: 20px;
+
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+    /* Same as above. Used as an alternative if all components are the same */
+    margin: 20px;
+
+}
+
+.box-1 h1{
+
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
+    font-style:italic;
+    text-decoration:underline;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    word-spacing: 1em;
+
+}
+
+.box-2{
+    border: 3px dotted blue;
+    padding: 20px;
+    margin: 20px;
+}
+
+.choices{
+    border: 1px solid green;
+    padding: 10px;
+    border-radius: 15px;
+    
+}
+
+.choices h2{
+    text-align: center;
+}
+
+.choices ul{
+    padding: 0;
+    list-style: none;
 }
