--- a/CSScheatsheet/css/style.css
+++ b/CSScheatsheet/css/style.css
@@ -179,3 +179,10 @@ a:visited{
     padding: 15px;
     box-sizing: border-box;
 }
+
+.p-box{
+    width: 800px;
+    height: 500px;
+    border: 1px solid black;
+    margin-top: 30px;
+}
