--- a/CSScheatsheet/css/style.css
+++ b/CSScheatsheet/css/style.css
@@ -26,7 +26,7 @@ body{
 
 a{
     text-decoration:none;
-    color: black;
+    color: white;
 }
 
 a:hover{
@@ -37,18 +37,14 @@ a:active{
     color:green;
 }
 
-a:visited{
-    color: black;
-}
-
 .container{
     width: 80%;
     margin: auto;
 }
 
 .button{
-    background-color: black;
-    color: red;
+    background-color: orange;
+    color: white;
     padding: 10px 15px;
     border: none;
 }
@@ -185,4 +181,25 @@ a:visited{
     height: 500px;
     border: 1px solid black;
     margin-top: 30px;
+    position: relative;
+}
+
+.p-box h1{
+
+    position: absolute;
+    top: 40px;
+    left: 100px;
+
+}
+
+.p-box h2{
+
+    position: absolute;
+    bottom: 50px;
+    right: 120px;
+}
+
+.fix-me{
+    position: fixed;
+    top: 100px;
 }
