--- a/CSScheatsheet/css/style.css
+++ b/CSScheatsheet/css/style.css
@@ -206,3 +206,16 @@ a:active{
     position: fixed;
     top: 100px;
 }
+
+.my-list li:first-child{
+    background-color: blue;
+}
+
+.my-list li:last-child{
+    background-color: red;
+}
+
+.my-list li:nth-child(3){
+    background-color: yellow;
+}
+
