--- a/Flex/styles.css
+++ b/Flex/styles.css
@@ -7,7 +7,7 @@
     height: 300px;
     border: 2px solid red;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
