--- a/Flex/styles.css
+++ b/Flex/styles.css
@@ -4,11 +4,13 @@
 
 .container{
     width: 100%;
-    height: 300px;
+    height: 600px;
     border: 2px solid red;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
-    align-items: center;
+    align-items: center ;
+    
 }
 
 .box{
