--- a/Flex/styles.css
+++ b/Flex/styles.css
@@ -7,9 +7,8 @@
     height: 600px;
     border: 2px solid red;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center ;
+    justify-content: center;
+    align-items: center;
     
 }
 
