--- a/Flex/styles-DESKTOP-5T5DR0L.css
+++ b/Flex/styles-DESKTOP-5T5DR0L.css
@@ -4,10 +4,12 @@
 
 .container{
     width: 100%;
-    height: 300px;
+    height: 600px;
     border: 2px solid red;
     display: flex;
     justify-content: center;
+    align-items: center;
+    
 }
 
 .box{
